--- a/src/views/room.ejs
+++ b/src/views/room.ejs
@@ -54,7 +54,7 @@
                     <footer>
                         <div>
                             <img src="/images/lock.svg" alt="Cadeado">
-                            Esta pergunta é anonima
+                            Esta pergunta é anônima
                         </div>
 
                         <button>Enviar</button>
